--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
 	"version": "0.0.1",
 	"type": "module",
 	"engines": {
-		"node": "20.x"
+		"node": ">=20 <25"
 	},
 	"scripts": {
 		"dev": "cross-env ROLLUP_WASM=true vite dev",
-		"build": "cross-env ROLLUP_WASM=true vite build",
+		"build": "cross-env ROLLUP_WASM=true svelte-kit sync && cross-env ROLLUP_WASM=true vite build",
 		"preview": "vite preview",
-		"prepare": "cross-env ROLLUP_WASM=true svelte-kit sync || echo ''",
 		"check": "cross-env ROLLUP_WASM=true svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "cross-env ROLLUP_WASM=true svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
