--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"packageManager": "pnpm@9"
 	}
 }
