--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
 		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
+		"vite": "^7.1.7",
+		"rollup": "npm:@rollup/wasm-node@^4.24.0"
 	},
 	"overrides": {
 		"rollup": "npm:@rollup/wasm-node@^4.24.0"
